# quantlix-assistant

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  architecture.html  docker-compose.yml  package-lock.json
backend/: Dockerfile  README.md  pyproject.toml  requirements.txt
backend/app/: __init__.py  main.py  prompts.py  quantlix_client.py  rag.py
backend/scripts/: index_docs.py
contracts/: support-bot.json
docs/: CUSTOMIZE.md  DEPLOY.md  POLICIES_EXPLAINED.md
infra/kubernetes/base/: kustomization.yaml
infra/kubernetes/base/assistant/: deployment.yaml  docs-pvc.yaml  hpa.yaml  indexer-cronjob.yaml  ingress.yaml  service.yaml
infra/kubernetes/base/postgres/: configmap-init.yaml  secret-example.yaml  service.yaml  statefulset.yaml
infra/kubernetes/overlays/prod/: kustomization.yaml
policies/: POLICIES.md  budget-per-session.json  jailbreak-prevention.json  pii-redaction.json  rate-limit-per-ip.json  scope-enforcement.json
scripts/: deploy-prod.sh  env-kubeconfig.example.sh
widget/: Dockerfile  README.md  chat.html  embed-chat.html  embed.html  index.html  package-lock.json  package.json  react-demo.html  vite.config.ts  vite.lib.config.ts
widget/src/: ChatWidget.tsx  styles.css
widget/src/chat/: ProtectedChat.tsx  ProtectedChatWidget.tsx  chat.css  index.ts  main.tsx
widget/src/components/: AssistantMarkdownBody.tsx  AssistantReplyLoader.tsx  AssistantResponseCard.tsx  CalloutBox.tsx  EnforcementInsight.tsx  RelatedLinksRow.tsx  StepCard.tsx  SuggestionChips.tsx
widget/src/lib/: responseIntent.ts
(+13 files in other folders)
