[project]
name = "quantlix-assistant-backend"
version = "0.1.0"
description = "Governed support chatbot backend for Quantlix Assistant"
requires-python = ">=3.11"
dependencies = [
  "fastapi",
  "httpx",
  "pgvector",
  "voyageai"
]

[tool.ruff]
line-length = 88

[tool.mypy]
strict = true
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true

